@@ -17,7 +17,10 @@ import org.springframework.data.jpa.repository.Query;
 import org.springframework.data.repository.query.Param;
 import org.springframework.stereotype.Repository;
 
-import de.tum.in.www1.artemis.domain.*;
+import de.tum.in.www1.artemis.domain.Exercise;
+import de.tum.in.www1.artemis.domain.Result;
+import de.tum.in.www1.artemis.domain.Submission;
+import de.tum.in.www1.artemis.domain.User;
 import de.tum.in.www1.artemis.domain.enumeration.AssessmentType;
 import de.tum.in.www1.artemis.domain.enumeration.ExerciseMode;
 import de.tum.in.www1.artemis.domain.exam.ExerciseGroup;
@@ -91,7 +94,8 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
             SELECT DISTINCT p FROM StudentParticipation p
             LEFT JOIN FETCH p.submissions s
             LEFT JOIN FETCH s.results
-            WHERE p.exercise.id = :#{#exerciseId} AND (s.type <> 'ILLEGAL' OR s.type IS NULL)
+            WHERE p.exercise.id = :#{#exerciseId}
+            AND (s.type <> 'ILLEGAL' OR s.type IS NULL)
             """)
     List<StudentParticipation> findByExerciseIdWithEagerLegalSubmissionsResult(@Param("exerciseId") Long exerciseId);
 
@@ -109,7 +113,8 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
             LEFT JOIN FETCH p.submissions s
             LEFT JOIN FETCH s.results r
             LEFT JOIN FETCH r.assessor
-            WHERE p.exercise.id = :#{#exerciseId} AND p.testRun = false
+            WHERE p.exercise.id = :#{#exerciseId}
+            AND p.testRun = false
             """)
     List<StudentParticipation> findByExerciseIdWithEagerSubmissionsResultAssessorIgnoreTestRuns(@Param("exerciseId") Long exerciseId);
 
@@ -127,6 +132,21 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
             SELECT DISTINCT p FROM StudentParticipation p
             LEFT JOIN FETCH p.submissions s
             LEFT JOIN FETCH s.results r
+            LEFT JOIN FETCH r.feedbacks
+            WHERE p.exercise.id = :#{#exerciseId}
+            AND p.student.id = :#{#studentId}
+            """)
+    Optional<StudentParticipation> findByExerciseIdAndStudentIdWithEagerSubmissionsResultsFeedbacks(@Param("exerciseId") Long exerciseId, @Param("studentId") Long studentId);
+
+    default StudentParticipation findByExerciseIdAndStudentIdWithEagerSubmissionsResultsFeedbacksElseThrow(Long exerciseId, Long studentId) {
+        return findByExerciseIdAndStudentIdWithEagerSubmissionsResultsFeedbacks(exerciseId, studentId)
+                .orElseThrow(() -> new EntityNotFoundException("Student Participation", exerciseId + "-" + studentId));
+    }
+
+    @Query("""
+            SELECT DISTINCT p FROM StudentParticipation p
+            LEFT JOIN FETCH p.submissions s
+            LEFT JOIN FETCH s.results r
             LEFT JOIN FETCH r.assessor
             LEFT JOIN FETCH r.feedbacks
             WHERE p.exercise.id = :#{#exerciseId} AND p.testRun = false
@@ -134,6 +154,7 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
     List<StudentParticipation> findByExerciseIdWithEagerSubmissionsResultAssessorFeedbacksIgnoreTestRuns(@Param("exerciseId") Long exerciseId);
 
     // TODO SE improve
+
     /**
      * Get all participations for an exercise with each latest result (determined by id).
      * If there is no latest result (= no result at all), the participation will still be included in the returned ResultSet, but will have an empty Result array.
@@ -330,7 +351,7 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
     /**
      * Find all participations of submissions that are submitted and do not already have a manual result and do not belong to test runs.
      * No manual result means that no user has started an assessment for the corresponding submission yet.
-     *
+     * <p>
      * If a student can have multiple submissions per exercise type, the latest not {@link de.tum.in.www1.artemis.domain.enumeration.SubmissionType#ILLEGAL} ILLEGAL submission (by id) will be returned.
      *
      * @param correctionRound the correction round the fetched results should belong to
@@ -338,39 +359,40 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
      * @return a list of participations including their submitted submissions that do not have a manual result
      */
     @Query("""
-            SELECT DISTINCT p FROM StudentParticipation p
-            LEFT JOIN FETCH p.submissions submission
-            LEFT JOIN FETCH submission.results result
-            LEFT JOIN FETCH result.feedbacks feedbacks
-            LEFT JOIN FETCH result.assessor
-            WHERE p.exercise.id = :#{#exerciseId}
-            AND p.testRun = FALSE
-            AND 0L = (SELECT COUNT(r2)
-                             FROM Result r2 WHERE r2.assessor IS NOT NULL
-                                 AND (r2.rated IS NULL OR r2.rated = FALSE)
-                                 AND r2.submission = submission)
-            AND
-              :#{#correctionRound} = (SELECT COUNT(r)
-                             FROM Result r WHERE r.assessor IS NOT NULL
-                                 AND r.rated = TRUE
-                                 AND r.submission = submission
-                                 AND r.completionDate IS NOT NULL
-                                 AND r.assessmentType IN ('MANUAL', 'SEMI_AUTOMATIC')
-                                 AND (p.exercise.dueDate IS NULL OR r.submission.submissionDate <= p.exercise.dueDate))
-            AND :#{#correctionRound} = (SELECT COUNT (prs)
-                            FROM p.results prs
-                            WHERE prs.assessmentType IN ('MANUAL', 'SEMI_AUTOMATIC'))
-            AND submission.submitted = true
-            AND submission.id = (SELECT max(id) FROM p.submissions)
+                SELECT DISTINCT p FROM StudentParticipation p
+                LEFT JOIN FETCH p.submissions submission
+                LEFT JOIN FETCH submission.results result
+                LEFT JOIN FETCH result.feedbacks feedbacks
+                LEFT JOIN FETCH result.assessor
+                WHERE p.exercise.id = :#{#exerciseId}
+                AND p.testRun = FALSE
+                AND 0L = (SELECT COUNT(r2)
+                                 FROM Result r2 WHERE r2.assessor IS NOT NULL
+                                     AND (r2.rated IS NULL OR r2.rated = FALSE)
+                                     AND r2.submission = submission)
+                AND
+                  :#{#correctionRound} = (SELECT COUNT(r)
+                                 FROM Result r WHERE r.assessor IS NOT NULL
+                                     AND r.rated = TRUE
+                                     AND r.submission = submission
+                                     AND r.completionDate IS NOT NULL
+                                     AND r.assessmentType IN ('MANUAL', 'SEMI_AUTOMATIC')
+                                     AND (p.exercise.dueDate IS NULL OR r.submission.submissionDate <= p.exercise.dueDate))
+                AND :#{#correctionRound} = (SELECT COUNT (prs)
+                                FROM p.results prs
+                                WHERE prs.assessmentType IN ('MANUAL', 'SEMI_AUTOMATIC'))
+                AND submission.submitted = true
+                AND submission.id = (SELECT max(id) FROM p.submissions)
             """)
     List<StudentParticipation> findByExerciseIdWithLatestSubmissionWithoutManualResultsAndIgnoreTestRunParticipation(@Param("exerciseId") Long exerciseId,
             @Param("correctionRound") long correctionRound);
 
     // TODO SE This one need to be improved.
+
     /**
      * Find all participations of submissions that are submitted and do not already have a manual result. No manual result means that no user has started an assessment for the
      * corresponding submission yet.
-     *
+     * <p>
      * If a student can have multiple submissions per exercise type, the latest not {@link de.tum.in.www1.artemis.domain.enumeration.SubmissionType#ILLEGAL} ILLEGAL submission (by id) will be returned.
      *
      * @param exerciseId the exercise id the participations should belong to
@@ -471,7 +493,7 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
     /**
      * Find the participation with the given id. Additionally, load all the submissions and results of the participation from the database.
      * Further, load the exercise and its course. Returns an empty Optional if the participation could not be found.
-     *
+     * <p>
      * Note: Does NOT load illegal submissions!
      *
      * @param participationId the id of the participation
@@ -566,6 +588,16 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
     @Query("""
             SELECT DISTINCT p FROM StudentParticipation p
             LEFT JOIN FETCH p.submissions s
+            WHERE p.testRun = FALSE
+                AND p.student.id = :#{#studentId}
+                AND p.exercise in :#{#exercises}
+            """)
+    List<StudentParticipation> findByStudentIdAndIndividualExercisesWithEagerSubmissionsIgnoreTestRuns(@Param("studentId") Long studentId,
+            @Param("exercises") List<Exercise> exercises);
+
+    @Query("""
+            SELECT DISTINCT p FROM StudentParticipation p
+            LEFT JOIN FETCH p.submissions s
             LEFT JOIN FETCH s.results r
             LEFT JOIN FETCH r.assessor
             WHERE p.testRun = FALSE
@@ -579,11 +611,33 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
             SELECT DISTINCT p FROM StudentParticipation p
             LEFT JOIN FETCH p.submissions s
             LEFT JOIN FETCH s.results r
+            WHERE p.testRun = FALSE
+            AND p.initializationDate = :#{#initializationDate}
+                AND p.student.id = :#{#studentId}
+                AND p.exercise in :#{#exercises}
+            """)
+    List<StudentParticipation> findParticipationsByStudentIdAndIndividualExercisesWithEagerSubmissionsResultIgnoreTestRuns(@Param("studentId") Long studentId,
+            @Param("exercises") List<Exercise> exercises, @Param("initializationDate") ZonedDateTime initializationDate);
+
+    @Query("""
+            SELECT DISTINCT p FROM StudentParticipation p
+            LEFT JOIN FETCH p.submissions s
+            LEFT JOIN FETCH s.results r
             WHERE p.testRun = true
                 AND p.student.id = :#{#studentId}
                 AND p.exercise in :#{#exercises}
             """)
     List<StudentParticipation> findTestRunParticipationsByStudentIdAndIndividualExercisesWithEagerSubmissionsResult(@Param("studentId") Long studentId,
+            @Param("exercises") List<Exercise> exercises);
+
+    @Query("""
+            SELECT DISTINCT p FROM StudentParticipation p
+            LEFT JOIN FETCH p.submissions s
+            WHERE p.testRun = true
+                AND p.student.id = :#{#studentId}
+                AND p.exercise in :#{#exercises}
+            """)
+    List<StudentParticipation> findTestRunParticipationsByStudentIdAndIndividualExercisesWithEagerSubmissions(@Param("studentId") Long studentId,
             @Param("exercises") List<Exercise> exercises);
 
     @Query("""
@@ -626,7 +680,7 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
     /**
      * Count the number of submissions for each participation for a given team in a course
      *
-     * @param courseId the id of the course for which to consider participations
+     * @param courseId      the id of the course for which to consider participations
      * @param teamShortName the short name of the team for which to consider participations
      * @return Tuples of participation ids and number of submissions per participation
      */
@@ -680,12 +734,12 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
      * Get all participations belonging to exam with submissions and their relevant results.
      *
      * @param examId the id of the exam
-     * @return list of participations belonging to course
+     * @return an unmodifiable list of participations belonging to course
      */
     default List<StudentParticipation> findByExamIdWithSubmissionRelevantResult(Long examId) {
         var participations = findByExamIdWithEagerLegalSubmissionsRatedResults(examId); // without test run participations
         // filter out the participations of test runs which can only be made by instructors
-        participations = participations.stream().filter(studentParticipation -> !studentParticipation.isTestRun()).collect(Collectors.toList());
+        participations = participations.stream().filter(studentParticipation -> !studentParticipation.isTestRun()).toList();
         return filterParticipationsWithRelevantResults(participations, true);
     }
 
@@ -693,7 +747,7 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
      * Get all participations belonging to course with relevant results.
      *
      * @param courseId the id of the course
-     * @return list of participations belonging to course
+     * @return an unmodifiable list of participations belonging to course
      */
     default List<StudentParticipation> findByCourseIdWithRelevantResult(Long courseId) {
         List<StudentParticipation> participations = findByCourseIdWithEagerRatedResults(courseId);
@@ -702,9 +756,10 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
 
     /**
      * filters the relevant results by removing all irrelevant ones
-     * @param participations the participations to get filtered
+     *
+     * @param participations     the participations to get filtered
      * @param resultInSubmission flag to indicate if the results are represented in the submission or participation
-     * @return the filtered participations
+     * @return an unmodifiable list of filtered participations
      */
     private List<StudentParticipation> filterParticipationsWithRelevantResults(List<StudentParticipation> participations, boolean resultInSubmission) {
 
@@ -748,7 +803,7 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
                         relevantResults.add(correctResult);
                     }
                     participation.setResults(new HashSet<>(relevantResults));
-                }).collect(Collectors.toList());
+                }).toList();
     }
 
     /**
@@ -774,6 +829,34 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
     }
 
     /**
+     * Get all participations for the given studentExam and exercises combined with their submissions, but without results and assessors.
+     * Distinguishes between student exams and test runs and only loads the respective participations
+     *
+     * @param studentExam  studentExam with exercises loaded
+     * @return student's participations with submissions and results
+     */
+    default List<StudentParticipation> findByStudentExamWithEagerSubmissions(StudentExam studentExam) {
+        if (studentExam.isTestRun()) {
+            return findTestRunParticipationsByStudentIdAndIndividualExercisesWithEagerSubmissions(studentExam.getUser().getId(), studentExam.getExercises());
+        }
+        else {
+            return findByStudentIdAndIndividualExercisesWithEagerSubmissionsIgnoreTestRuns(studentExam.getUser().getId(), studentExam.getExercises());
+        }
+    }
+
+    /**
+     * Gets all participation for the given studentExam for a test exam with their submissions and result.
+     * As multiple participations for a test exam can exists, the link is established with studentExam.startedDate <-> participation.InitializationDate
+     *
+     * @param studentExam studentExam with exercises loaded
+     * @return student's participations with submissions and results.
+     */
+    default List<StudentParticipation> findParticipationsByStudentIdAndIndividualExercisesWithEagerSubmissionsResultWithoutAssessor(StudentExam studentExam) {
+        return findParticipationsByStudentIdAndIndividualExercisesWithEagerSubmissionsResultIgnoreTestRuns(studentExam.getUser().getId(), studentExam.getExercises(),
+                studentExam.getStartedDate());
+    }
+
+    /**
      * Get a mapping of participation ids to the number of submission for each participation.
      *
      * @param exerciseId the id of the exercise for which to consider participations
@@ -786,7 +869,7 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
     /**
      * Get a mapping of participation ids to the number of submission for each participation.
      *
-     * @param courseId the id of the course for which to consider participations
+     * @param courseId      the id of the course for which to consider participations
      * @param teamShortName the short name of the team for which to consider participations
      * @return the number of submissions per participation in the given course for the team
      */
@@ -841,12 +924,12 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
      *
      * @param user      the user to get the participations for
      * @param exercises the exercise to get the participations for
-     * @return the participations of the user in the exercises
+     * @return an unmodifiable list of participations of the user in the exercises
      */
     default List<StudentParticipation> getAllParticipationsOfUserInExercises(User user, Set<Exercise> exercises) {
         Map<ExerciseMode, List<Exercise>> exercisesGroupedByExerciseMode = exercises.stream().collect(Collectors.groupingBy(Exercise::getMode));
-        List<Exercise> individualExercises = Optional.ofNullable(exercisesGroupedByExerciseMode.get(ExerciseMode.INDIVIDUAL)).orElse(List.of());
-        List<Exercise> teamExercises = Optional.ofNullable(exercisesGroupedByExerciseMode.get(ExerciseMode.TEAM)).orElse(List.of());
+        List<Exercise> individualExercises = Objects.requireNonNullElse(exercisesGroupedByExerciseMode.get(ExerciseMode.INDIVIDUAL), List.of());
+        List<Exercise> teamExercises = Objects.requireNonNullElse(exercisesGroupedByExerciseMode.get(ExerciseMode.TEAM), List.of());
 
         if (individualExercises.isEmpty() && teamExercises.isEmpty()) {
             return List.of();
@@ -862,11 +945,12 @@ public interface StudentParticipationRepository extends JpaRepository<StudentPar
         var teamParticipations = findByStudentIdAndTeamExercisesWithEagerLegalSubmissionsResult(user.getId(), teamExercises);
 
         // 3rd: merge both into one list for further processing
-        return Stream.concat(individualParticipations.stream(), teamParticipations.stream()).collect(Collectors.toList());
+        return Stream.concat(individualParticipations.stream(), teamParticipations.stream()).toList();
     }
 
     /**
      * Checks if the exercise has any test runs and sets the transient property if it does
+     *
      * @param exercise - the exercise for which we check if test runs exist
      */
     default void checkTestRunsExist(Exercise exercise) {
