@@ -9,7 +9,6 @@ import java.util.List;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import org.eclipse.jgit.api.errors.GitAPIException;
 import org.slf4j.Logger;
@@ -38,6 +37,7 @@ import de.tum.in.www1.artemis.service.FileService;
 import de.tum.in.www1.artemis.service.UrlService;
 import de.tum.in.www1.artemis.service.ZipFileService;
 import de.tum.in.www1.artemis.service.connectors.GitService;
+import de.tum.in.www1.artemis.service.plagiarism.cache.PlagiarismCacheService;
 import de.tum.in.www1.artemis.service.programming.ProgrammingExerciseExportService;
 import de.tum.in.www1.artemis.service.util.TimeLogUtil;
 import de.tum.in.www1.artemis.web.rest.errors.BadRequestAlertException;
@@ -68,11 +68,14 @@ public class ProgrammingPlagiarismDetectionService {
 
     private final PlagiarismWebsocketService plagiarismWebsocketService;
 
+    private final PlagiarismCacheService plagiarismCacheService;
+
     private final UrlService urlService;
 
     public ProgrammingPlagiarismDetectionService(ProgrammingExerciseRepository programmingExerciseRepository, FileService fileService, ZipFileService zipFileService,
             GitService gitService, StudentParticipationRepository studentParticipationRepository, PlagiarismResultRepository plagiarismResultRepository,
-            ProgrammingExerciseExportService programmingExerciseExportService, PlagiarismWebsocketService plagiarismWebsocketService, UrlService urlService) {
+            ProgrammingExerciseExportService programmingExerciseExportService, PlagiarismWebsocketService plagiarismWebsocketService, PlagiarismCacheService plagiarismCacheService,
+            UrlService urlService) {
         this.programmingExerciseRepository = programmingExerciseRepository;
         this.fileService = fileService;
         this.zipFileService = zipFileService;
@@ -81,6 +84,7 @@ public class ProgrammingPlagiarismDetectionService {
         this.programmingExerciseExportService = programmingExerciseExportService;
         this.plagiarismResultRepository = plagiarismResultRepository;
         this.plagiarismWebsocketService = plagiarismWebsocketService;
+        this.plagiarismCacheService = plagiarismCacheService;
         this.urlService = urlService;
     }
 
@@ -99,29 +103,43 @@ public class ProgrammingPlagiarismDetectionService {
         String topic = plagiarismWebsocketService.getProgrammingExercisePlagiarismCheckTopic(programmingExerciseId);
 
         final var programmingExercise = programmingExerciseRepository.findWithAllParticipationsById(programmingExerciseId).get();
-        JPlagResult result = getJPlagResult(programmingExercise, similarityThreshold, minimumScore);
-        if (result == null) {
-            log.info("Insufficient amount of submissions for plagiarism detection. Return empty result.");
-            TextPlagiarismResult textPlagiarismResult = new TextPlagiarismResult();
-            textPlagiarismResult.setExercise(programmingExercise);
-            textPlagiarismResult.setSimilarityDistribution(new int[0]);
 
-            log.info("Finished programmingExerciseExportService.checkPlagiarism call for {} comparisons in {}", textPlagiarismResult.getComparisons().size(),
-                    TimeLogUtil.formatDurationFrom(start));
+        // Only one plagiarism check per course allowed
+        var courseId = programmingExercise.getCourseViaExerciseGroupOrCourseMember().getId();
+
+        try {
+            if (plagiarismCacheService.isActivePlagiarismCheck(courseId)) {
+                throw new BadRequestAlertException("Only one active plagiarism check per course allowed", "PlagiarismCheck", "oneActivePlagiarismCheck");
+            }
+            plagiarismCacheService.setActivePlagiarismCheck(courseId);
+
+            JPlagResult result = getJPlagResult(programmingExercise, similarityThreshold, minimumScore);
+            if (result == null) {
+                log.info("Insufficient amount of submissions for plagiarism detection. Return empty result.");
+                TextPlagiarismResult textPlagiarismResult = new TextPlagiarismResult();
+                textPlagiarismResult.setExercise(programmingExercise);
+                textPlagiarismResult.setSimilarityDistribution(new int[0]);
+
+                log.info("Finished programmingExerciseExportService.checkPlagiarism call for {} comparisons in {}", textPlagiarismResult.getComparisons().size(),
+                        TimeLogUtil.formatDurationFrom(start));
+                limitAndSavePlagiarismResult(textPlagiarismResult);
+                log.info("Finished plagiarismResultRepository.savePlagiarismResultAndRemovePrevious call in {}", TimeLogUtil.formatDurationFrom(start));
+                return textPlagiarismResult;
+            }
+
+            log.info("JPlag programming comparison finished with {} comparisons for programming exercise {}", result.getComparisons().size(), programmingExerciseId);
+            TextPlagiarismResult textPlagiarismResult = new TextPlagiarismResult();
+            textPlagiarismResult.convertJPlagResult(result);
+            textPlagiarismResult.setExercise(programmingExercise);
+
+            log.info("JPlag programming comparison done in {}", TimeLogUtil.formatDurationFrom(start));
+            plagiarismWebsocketService.notifyInstructorAboutPlagiarismState(topic, PlagiarismCheckState.COMPLETED, List.of());
             limitAndSavePlagiarismResult(textPlagiarismResult);
-            log.info("Finished plagiarismResultRepository.savePlagiarismResultAndRemovePrevious call in {}", TimeLogUtil.formatDurationFrom(start));
             return textPlagiarismResult;
         }
-
-        log.info("JPlag programming comparison finished with {} comparisons for programming exercise {}", result.getComparisons().size(), programmingExerciseId);
-        TextPlagiarismResult textPlagiarismResult = new TextPlagiarismResult();
-        textPlagiarismResult.convertJPlagResult(result);
-        textPlagiarismResult.setExercise(programmingExercise);
-
-        log.info("JPlag programming comparison done in {}", TimeLogUtil.formatDurationFrom(start));
-        plagiarismWebsocketService.notifyInstructorAboutPlagiarismState(topic, PlagiarismCheckState.COMPLETED, List.of());
-        limitAndSavePlagiarismResult(textPlagiarismResult);
-        return textPlagiarismResult;
+        finally {
+            plagiarismCacheService.setInactivePlagiarismCheck(courseId);
+        }
     }
 
     /**
@@ -208,7 +226,7 @@ public class ProgrammingPlagiarismDetectionService {
     }
 
     /**
-     * Sorts and limits the text plagarism result amount to 500 and saves it into the database.
+     * Sorts and limits the text plagiarism result amount to 500 and saves it into the database.
      * Removes the previously saved result.
      *
      * @param textPlagiarismResult the plagiarism result to save
@@ -236,7 +254,7 @@ public class ProgrammingPlagiarismDetectionService {
 
         // Create directories.
         if (!outputFolderFile.mkdirs()) {
-            log.error("Cannot generate JPlag report because directorries couldn't be created: {}", outputFolder);
+            log.error("Cannot generate JPlag report because directories couldn't be created: {}", outputFolder);
             return null;
         }
 
@@ -328,7 +346,7 @@ public class ProgrammingPlagiarismDetectionService {
      *
      * @param programmingExercise ProgrammingExercise to fetch the participations for
      * @param minimumScore        consider only submissions whose score is greater or equal to this value
-     * @return List containing the latest text submission for every participation
+     * @return an unmodifiable list containing the latest text submission for every participation
      */
     public List<ProgrammingExerciseParticipation> filterStudentParticipationsForComparison(ProgrammingExercise programmingExercise, int minimumScore) {
         // TODO: when no minimum score is specified, filtering participations with empty submissions could be done directly in the database to improve performance
@@ -344,7 +362,7 @@ public class ProgrammingPlagiarismDetectionService {
                     }
                     return minimumScore == 0
                             || submission.getLatestResult() != null && submission.getLatestResult().getScore() != null && submission.getLatestResult().getScore() >= minimumScore;
-                }).collect(Collectors.toList());
+                }).toList();
     }
 
     private List<Repository> downloadRepositories(ProgrammingExercise programmingExercise, List<ProgrammingExerciseParticipation> participations, String targetPath) {
