@@ -42,6 +42,8 @@ import de.tum.in.www1.artemis.service.*;
 import de.tum.in.www1.artemis.service.connectors.CIUserManagementService;
 import de.tum.in.www1.artemis.service.connectors.VcsUserManagementService;
 import de.tum.in.www1.artemis.service.dto.StudentDTO;
+import de.tum.in.www1.artemis.service.feature.Feature;
+import de.tum.in.www1.artemis.service.feature.FeatureToggle;
 import de.tum.in.www1.artemis.web.rest.dto.*;
 import de.tum.in.www1.artemis.web.rest.errors.AccessForbiddenException;
 import de.tum.in.www1.artemis.web.rest.errors.BadRequestAlertException;
@@ -168,11 +170,13 @@ public class CourseResource {
         course.validateComplaintsAndRequestMoreFeedbackConfig();
         course.validateOnlineCourseAndRegistrationEnabled();
         course.validateAccuracyOfScores();
+        if (!course.isValidStartAndEndDate()) {
+            throw new BadRequestAlertException("For Courses, the start date has to be before the end date", Course.ENTITY_NAME, "invalidCourseStartDate", true);
+        }
 
         courseService.createOrValidateGroups(course);
         Course result = courseRepository.save(course);
-        return ResponseEntity.created(new URI("/api/courses/" + result.getId()))
-                .headers(HeaderUtil.createEntityCreationAlert(applicationName, true, Course.ENTITY_NAME, result.getTitle())).body(result);
+        return ResponseEntity.created(new URI("/api/courses/" + result.getId())).body(result);
     }
 
     /**
@@ -246,15 +250,15 @@ public class CourseResource {
 
         // Make sure to preserve associations in updated entity
         updatedCourse.setPrerequisites(existingCourse.getPrerequisites());
-        if (updatedCourse.getOrganizations().isEmpty()) {
-            updatedCourse.setOrganizations(existingCourse.getOrganizations());
-        }
 
         updatedCourse.validateRegistrationConfirmationMessage();
         updatedCourse.validateComplaintsAndRequestMoreFeedbackConfig();
         updatedCourse.validateOnlineCourseAndRegistrationEnabled();
         updatedCourse.validateShortName();
         updatedCourse.validateAccuracyOfScores();
+        if (!updatedCourse.isValidStartAndEndDate()) {
+            throw new BadRequestAlertException("For Courses, the start date has to be before the end date", Course.ENTITY_NAME, "invalidCourseStartDate", true);
+        }
 
         // Based on the old instructors, editors and TAs, we can update all exercises in the course in the VCS (if necessary)
         // We need the old instructors, editors and TAs, so that the VCS user management service can determine which
@@ -267,7 +271,7 @@ public class CourseResource {
                 .ifPresent(userManagementService -> userManagementService.updateCoursePermissions(result, oldInstructorGroup, oldEditorGroup, oldTeachingAssistantGroup));
         optionalCiUserManagementService
                 .ifPresent(ciUserManagementService -> ciUserManagementService.updateCoursePermissions(result, oldInstructorGroup, oldEditorGroup, oldTeachingAssistantGroup));
-        return ResponseEntity.ok().headers(HeaderUtil.createEntityUpdateAlert(applicationName, true, Course.ENTITY_NAME, updatedCourse.getTitle())).body(result);
+        return ResponseEntity.ok(result);
     }
 
     /**
@@ -328,7 +332,7 @@ public class CourseResource {
             // only include courses that have NOT been finished
             userCourses = userCourses.filter(course -> course.getEndDate() == null || course.getEndDate().isAfter(ZonedDateTime.now()));
         }
-        return userCourses.collect(Collectors.toList());
+        return userCourses.toList();
     }
 
     /**
@@ -382,7 +386,8 @@ public class CourseResource {
     }
 
     /**
-     * GET /courses/for-registration : get all courses that the current user can register to. Decided by the start and end date and if the registrationEnabled flag is set correctly
+     * GET /courses/for-registration : get all courses that the current user can register to.
+     * Decided by the start and end date and if the registrationEnabled flag is set correctly
      *
      * @return the list of courses which are active
      */
@@ -393,7 +398,7 @@ public class CourseResource {
         User user = userRepository.getUserWithGroupsAndAuthoritiesAndOrganizations();
 
         List<Course> allRegisteredCourses = courseService.findAllActiveForUser(user);
-        List<Course> allCoursesToRegister = courseRepository.findAllCurrentlyActiveNotOnlineAndRegistrationEnabledWithOrganizations();
+        List<Course> allCoursesToRegister = courseRepository.findAllCurrentlyActiveNotOnlineAndRegistrationEnabledWithOrganizationsAndPrerequisites();
         List<Course> registrableCourses = allCoursesToRegister.stream().filter(course -> {
             // further, check if the course has been assigned to any organization and if yes,
             // check if user is member of at least one of them
@@ -403,16 +408,15 @@ public class CourseResource {
             else {
                 return true;
             }
-        }).collect(Collectors.toList());
-        registrableCourses.removeAll(allRegisteredCourses);
+        }).filter(course -> !allRegisteredCourses.contains(course)).toList();
         return registrableCourses;
     }
 
     /**
      * GET /courses/{courseId}/for-dashboard
      *
-     * @param courseId the courseId for which exercises and lectures should be fetched
-     * @return a course which all exercises and lectures visible to the student
+     * @param courseId the courseId for which exercises, lectures, exams and learning goals should be fetched
+     * @return a course with all exercises, lectures, exams and learning goals visible to the student
      */
     @GetMapping("/courses/{courseId}/for-dashboard")
     @PreAuthorize("hasRole('USER')")
@@ -420,7 +424,7 @@ public class CourseResource {
         long start = System.currentTimeMillis();
         User user = userRepository.getUserWithGroupsAndAuthorities();
 
-        Course course = courseService.findOneWithExercisesAndLecturesAndExamsForUser(courseId, user);
+        Course course = courseService.findOneWithExercisesAndLecturesAndExamsAndLearningGoalsForUser(courseId, user);
         courseService.fetchParticipationsWithSubmissionsAndResultsForCourses(List.of(course), user, start);
         return course;
     }
@@ -726,6 +730,7 @@ public class CourseResource {
      */
     @PutMapping("/courses/{courseId}/archive")
     @PreAuthorize("hasRole('INSTRUCTOR')")
+    @FeatureToggle(Feature.Exports)
     public ResponseEntity<Void> archiveCourse(@PathVariable Long courseId) {
         log.info("REST request to archive Course : {}", courseId);
         final Course course = courseRepository.findByIdWithExercisesAndLecturesElseThrow(courseId);
@@ -1154,14 +1159,36 @@ public class CourseResource {
     @GetMapping("courses/{courseId}/statistics")
     @PreAuthorize("hasRole('TA')")
     public ResponseEntity<List<Integer>> getActiveStudentsForCourseDetailView(@PathVariable Long courseId, @RequestParam Long periodIndex) {
-        authCheckService.checkHasAtLeastRoleInCourseElseThrow(Role.TEACHING_ASSISTANT, courseRepository.findByIdElseThrow(courseId), null);
-        var exerciseIds = exerciseRepository.findAllIdsByCourseId(courseId);
-        var spanEndDate = now().plusWeeks(17 * periodIndex);
         var course = courseRepository.findByIdElseThrow(courseId);
+        authCheckService.checkHasAtLeastRoleInCourseElseThrow(Role.TEACHING_ASSISTANT, course, null);
+        var exerciseIds = exerciseRepository.findAllIdsByCourseId(courseId);
+        var chartEndDate = this.courseService.determineEndDateForActiveStudents(course);
+        var spanEndDate = chartEndDate.plusWeeks(17 * periodIndex);
         var returnedSpanSize = this.courseService.determineTimeSpanSizeForActiveStudents(course, spanEndDate, 17);
-        var activeStudents = courseService.getActiveStudents(exerciseIds, periodIndex, 17, now());
+        var activeStudents = courseService.getActiveStudents(exerciseIds, periodIndex, 17, chartEndDate);
         // We omit data concerning the time before the start date
         return ResponseEntity.ok(activeStudents.subList(activeStudents.size() - returnedSpanSize, activeStudents.size()));
+    }
+
+    /**
+     * GET /courses/:courseId/statistics-lifetime-overview : Get the active students for this particular course over its whole lifetime
+     *
+     * @param courseId the id of the course
+     * @return the ResponseEntity with status 200 (OK) and the data in body, or status 404 (Not Found)
+     */
+    @GetMapping("courses/{courseId}/statistics-lifetime-overview")
+    @PreAuthorize("hasRole('TA')")
+    public ResponseEntity<List<Integer>> getActiveStudentsForCourseLivetime(@PathVariable Long courseId) {
+        authCheckService.checkHasAtLeastRoleInCourseElseThrow(Role.TEACHING_ASSISTANT, courseRepository.findByIdElseThrow(courseId), null);
+        var exerciseIds = exerciseRepository.findAllIdsByCourseId(courseId);
+        var course = courseRepository.findByIdElseThrow(courseId);
+        if (course.getStartDate() == null) {
+            throw new IllegalArgumentException("Course does not contain start date");
+        }
+        var endDate = this.courseService.determineEndDateForActiveStudents(course);
+        var returnedSpanSize = this.courseService.calculateWeeksBetweenDates(course.getStartDate(), endDate);
+        var activeStudents = courseService.getActiveStudents(exerciseIds, 0, Math.toIntExact(returnedSpanSize), endDate);
+        return ResponseEntity.ok(activeStudents);
     }
 
     /**
