@@ -1,6 +1,5 @@
 package de.tum.in.www1.artemis;
 
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.codec.digest.DigestUtils.sha1Hex;
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -22,10 +21,10 @@ import de.tum.in.www1.artemis.domain.modeling.ModelCluster;
 import de.tum.in.www1.artemis.domain.modeling.ModelElement;
 import de.tum.in.www1.artemis.domain.modeling.ModelingExercise;
 import de.tum.in.www1.artemis.domain.modeling.ModelingSubmission;
-import de.tum.in.www1.artemis.repository.ModelAssesmentKnowledgeRepository;
+import de.tum.in.www1.artemis.repository.ModelAssessmentKnowledgeRepository;
 import de.tum.in.www1.artemis.repository.ModelingExerciseRepository;
 import de.tum.in.www1.artemis.repository.StudentParticipationRepository;
-import de.tum.in.www1.artemis.repository.TextAssesmentKnowledgeRepository;
+import de.tum.in.www1.artemis.repository.TextAssessmentKnowledgeRepository;
 import de.tum.in.www1.artemis.repository.TextExerciseRepository;
 import de.tum.in.www1.artemis.repository.TextSubmissionRepository;
 import de.tum.in.www1.artemis.service.ModelAssessmentKnowledgeService;
@@ -35,7 +34,7 @@ import de.tum.in.www1.artemis.util.FileUtils;
 import de.tum.in.www1.artemis.util.ModelFactory;
 import de.tum.in.www1.artemis.util.ModelingExerciseUtilService;
 
-public class AssessmentKnowledgeIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTest {
+class AssessmentKnowledgeIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTest {
 
     @Autowired
     private TextExerciseRepository textExerciseRepository;
@@ -44,10 +43,10 @@ public class AssessmentKnowledgeIntegrationTest extends AbstractSpringIntegratio
     private ModelingExerciseRepository modelingExerciseRepository;
 
     @Autowired
-    private TextAssesmentKnowledgeRepository textAssesmentKnowledgeRepository;
+    private TextAssessmentKnowledgeRepository textAssessmentKnowledgeRepository;
 
     @Autowired
-    private ModelAssesmentKnowledgeRepository modelAssesmentKnowledgeRepository;
+    private ModelAssessmentKnowledgeRepository modelAssessmentKnowledgeRepository;
 
     @Autowired
     private ModelingExerciseUtilService modelingExerciseUtilService;
@@ -65,13 +64,13 @@ public class AssessmentKnowledgeIntegrationTest extends AbstractSpringIntegratio
     private ModelAssessmentKnowledgeService modelAssessmentKnowledgeService;
 
     @BeforeEach
-    public void initTestCase() {
+    void initTestCase() {
         database.addUsers(10, 1, 0, 1);
         database.addInstructor("other-instructors", "instructorother");
     }
 
     @AfterEach
-    public void tearDown() {
+    void tearDown() {
         database.resetDatabase();
     }
 
@@ -82,13 +81,13 @@ public class AssessmentKnowledgeIntegrationTest extends AbstractSpringIntegratio
      */
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testCreateTextAssessmentKnowledgeIfExerciseIsCreatedFromScratch() throws Exception {
+    void testCreateTextAssessmentKnowledgeIfExerciseIsCreatedFromScratch() throws Exception {
         final Course course = database.addCourseWithOneReleasedTextExercise();
         TextExercise textExercise = textExerciseRepository.findByCourseIdWithCategories(course.getId()).get(0);
-        int count = textAssesmentKnowledgeRepository.findAll().size();
+        int count = textAssessmentKnowledgeRepository.findAll().size();
         textExercise.setId(null);
         request.postWithResponseBody("/api/text-exercises/", textExercise, TextExercise.class, HttpStatus.CREATED);
-        assertThat(count + 1).isEqualTo(textAssesmentKnowledgeRepository.findAll().size());
+        assertThat(count + 1).isEqualTo(textAssessmentKnowledgeRepository.findAll().size());
     }
 
     /**
@@ -98,13 +97,13 @@ public class AssessmentKnowledgeIntegrationTest extends AbstractSpringIntegratio
      */
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testReuseTextAssessmentKnowledgeIfExerciseIsImported() throws Exception {
+    void testReuseTextAssessmentKnowledgeIfExerciseIsImported() throws Exception {
         final Course course = database.addCourseWithOneReleasedTextExercise();
         TextExercise textExercise = textExerciseRepository.findByCourseIdWithCategories(course.getId()).get(0);
         int exerciseCount = textExerciseRepository.findAll().size();
-        int textAssessmentKnowledgeCount = textAssesmentKnowledgeRepository.findAll().size();
+        int textAssessmentKnowledgeCount = textAssessmentKnowledgeRepository.findAll().size();
         request.postWithResponseBody("/api/text-exercises/import/" + textExercise.getId(), textExercise, TextExercise.class, HttpStatus.CREATED);
-        assertThat(textAssesmentKnowledgeRepository.findAll()).hasSize(textAssessmentKnowledgeCount);
+        assertThat(textAssessmentKnowledgeRepository.findAll()).hasSize(textAssessmentKnowledgeCount);
         assertThat(textExerciseRepository.findAll()).hasSize(exerciseCount + 1);
     }
 
@@ -116,15 +115,15 @@ public class AssessmentKnowledgeIntegrationTest extends AbstractSpringIntegratio
      */
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testKeepKnowledgeWhenExerciseIsDeletedIfOtherExercisesUseIt() throws Exception {
+    void testKeepKnowledgeWhenExerciseIsDeletedIfOtherExercisesUseIt() throws Exception {
         final Course course = database.addCourseWithOneReleasedTextExercise();
         TextExercise textExercise = textExerciseRepository.findByCourseIdWithCategories(course.getId()).get(0);
         request.postWithResponseBody("/api/text-exercises/import/" + textExercise.getId(), textExercise, TextExercise.class, HttpStatus.CREATED);
         int exerciseCount = textExerciseRepository.findAll().size();
-        int textAssessmentKnowledgeCount = textAssesmentKnowledgeRepository.findAll().size();
+        int textAssessmentKnowledgeCount = textAssessmentKnowledgeRepository.findAll().size();
         request.delete("/api/text-exercises/" + textExercise.getId(), HttpStatus.OK);
         assertThat(textExerciseRepository.findAll()).hasSize(exerciseCount - 1);
-        assertThat(textAssesmentKnowledgeRepository.findAll()).hasSize(textAssessmentKnowledgeCount);
+        assertThat(textAssessmentKnowledgeRepository.findAll()).hasSize(textAssessmentKnowledgeCount);
     }
 
     /**
@@ -135,20 +134,20 @@ public class AssessmentKnowledgeIntegrationTest extends AbstractSpringIntegratio
      */
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testDeleteKnowledgeWhenExerciseIsDeletedIfNoOtherExercisesUseIt() throws Exception {
+    void testDeleteKnowledgeWhenExerciseIsDeletedIfNoOtherExercisesUseIt() throws Exception {
         final Course course = database.addCourseWithOneReleasedTextExercise();
         TextExercise textExercise = textExerciseRepository.findByCourseIdWithCategories(course.getId()).get(0);
         TextExercise importedExercise = request.postWithResponseBody("/api/text-exercises/import/" + textExercise.getId(), textExercise, TextExercise.class, HttpStatus.CREATED);
         int exerciseCount = textExerciseRepository.findAll().size();
-        int textAssessmentKnowledgeCount = textAssesmentKnowledgeRepository.findAll().size();
+        int textAssessmentKnowledgeCount = textAssessmentKnowledgeRepository.findAll().size();
         request.delete("/api/text-exercises/" + textExercise.getId(), HttpStatus.OK);
         int exerciseCountAfterDeletion = textExerciseRepository.findAll().size();
-        int textAssessmentKnowledgeCountAfterDeletion = textAssesmentKnowledgeRepository.findAll().size();
+        int textAssessmentKnowledgeCountAfterDeletion = textAssessmentKnowledgeRepository.findAll().size();
         request.delete("/api/text-exercises/" + importedExercise.getId(), HttpStatus.OK);
         assertThat(exerciseCountAfterDeletion).isEqualTo(exerciseCount - 1);
         assertThat(textAssessmentKnowledgeCountAfterDeletion).isEqualTo(textAssessmentKnowledgeCount);
         assertThat(textExerciseRepository.findAll()).hasSize(exerciseCount - 2);
-        assertThat(textAssesmentKnowledgeRepository.findAll()).hasSize(textAssessmentKnowledgeCount - 1);
+        assertThat(textAssessmentKnowledgeRepository.findAll()).hasSize(textAssessmentKnowledgeCount - 1);
     }
 
     /**
@@ -158,12 +157,12 @@ public class AssessmentKnowledgeIntegrationTest extends AbstractSpringIntegratio
      */
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testCreateModelAssessmentKnowledgeIfExerciseIsCreatedFromScratch() throws Exception {
+    void testCreateModelAssessmentKnowledgeIfExerciseIsCreatedFromScratch() throws Exception {
         Course course = database.addEmptyCourse();
         ModelingExercise modelingExercise = modelingExerciseUtilService.createModelingExercise(course.getId());
-        int count = modelAssesmentKnowledgeRepository.findAll().size();
+        int count = modelAssessmentKnowledgeRepository.findAll().size();
         request.postWithResponseBody("/api/modeling-exercises", modelingExercise, ModelingExercise.class, HttpStatus.CREATED);
-        assertThat(modelAssesmentKnowledgeRepository.findAll()).hasSize(count + 1);
+        assertThat(modelAssessmentKnowledgeRepository.findAll()).hasSize(count + 1);
     }
 
     /**
@@ -173,13 +172,13 @@ public class AssessmentKnowledgeIntegrationTest extends AbstractSpringIntegratio
      */
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testReuseModelAssessmentKnowledgeIfExerciseIsImported() throws Exception {
+    void testReuseModelAssessmentKnowledgeIfExerciseIsImported() throws Exception {
         final Course course = database.addCourseWithOneReleasedModelExerciseWithKnowledge();
         ModelingExercise modelingExercise = modelingExerciseRepository.findByCourseIdWithCategories(course.getId()).get(0);
         int exerciseCount = modelingExerciseRepository.findAll().size();
-        int modelAssessmentKnowledgeCount = modelAssesmentKnowledgeRepository.findAll().size();
+        int modelAssessmentKnowledgeCount = modelAssessmentKnowledgeRepository.findAll().size();
         request.postWithResponseBody("/api/modeling-exercises/import/" + modelingExercise.getId(), modelingExercise, ModelingExercise.class, HttpStatus.CREATED);
-        assertThat(modelAssesmentKnowledgeRepository.findAll()).hasSize(modelAssessmentKnowledgeCount);
+        assertThat(modelAssessmentKnowledgeRepository.findAll()).hasSize(modelAssessmentKnowledgeCount);
         assertThat(modelingExerciseRepository.findAll()).hasSize(exerciseCount + 1);
     }
 
@@ -191,15 +190,15 @@ public class AssessmentKnowledgeIntegrationTest extends AbstractSpringIntegratio
      */
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testKeepModelAssessmentKnowledgeWhenExerciseIsDeletedIfOtherExercisesUseIt() throws Exception {
+    void testKeepModelAssessmentKnowledgeWhenExerciseIsDeletedIfOtherExercisesUseIt() throws Exception {
         final Course course = database.addCourseWithOneReleasedModelExerciseWithKnowledge();
         ModelingExercise modelingExercise = modelingExerciseRepository.findByCourseIdWithCategories(course.getId()).get(0);
         request.postWithResponseBody("/api/modeling-exercises/import/" + modelingExercise.getId(), modelingExercise, ModelingExercise.class, HttpStatus.CREATED);
         int exerciseCount = modelingExerciseRepository.findAll().size();
-        int modelAssessmentKnowledgeCount = modelAssesmentKnowledgeRepository.findAll().size();
+        int modelAssessmentKnowledgeCount = modelAssessmentKnowledgeRepository.findAll().size();
         request.delete("/api/modeling-exercises/" + modelingExercise.getId(), HttpStatus.OK);
         assertThat(modelingExerciseRepository.findAll()).hasSize(exerciseCount - 1);
-        assertThat(modelAssesmentKnowledgeRepository.findAll()).hasSize(modelAssessmentKnowledgeCount);
+        assertThat(modelAssessmentKnowledgeRepository.findAll()).hasSize(modelAssessmentKnowledgeCount);
     }
 
     /**
@@ -210,21 +209,21 @@ public class AssessmentKnowledgeIntegrationTest extends AbstractSpringIntegratio
      */
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testDeleteModelAssessmentKnowledgeWhenExerciseIsDeletedIfNoOtherExercisesUseIt() throws Exception {
+    void testDeleteModelAssessmentKnowledgeWhenExerciseIsDeletedIfNoOtherExercisesUseIt() throws Exception {
         final Course course = database.addCourseWithOneReleasedModelExerciseWithKnowledge();
         ModelingExercise modelingExercise = modelingExerciseRepository.findByCourseIdWithCategories(course.getId()).get(0);
         ModelingExercise importedExercise = request.postWithResponseBody("/api/modeling-exercises/import/" + modelingExercise.getId(), modelingExercise, ModelingExercise.class,
                 HttpStatus.CREATED);
         int exerciseCount = modelingExerciseRepository.findAll().size();
-        int modelAssessmentKnowledgeCount = modelAssesmentKnowledgeRepository.findAll().size();
+        int modelAssessmentKnowledgeCount = modelAssessmentKnowledgeRepository.findAll().size();
         request.delete("/api/modeling-exercises/" + modelingExercise.getId(), HttpStatus.OK);
         int exerciseCountAfterDeletion = modelingExerciseRepository.findAll().size();
-        int modelAssessmentKnowledgeCountAfterDeletion = modelAssesmentKnowledgeRepository.findAll().size();
+        int modelAssessmentKnowledgeCountAfterDeletion = modelAssessmentKnowledgeRepository.findAll().size();
         request.delete("/api/modeling-exercises/" + importedExercise.getId(), HttpStatus.OK);
         assertThat(exerciseCountAfterDeletion).isEqualTo(exerciseCount - 1);
         assertThat(modelAssessmentKnowledgeCountAfterDeletion).isEqualTo(modelAssessmentKnowledgeCount);
         assertThat(modelingExerciseRepository.findAll()).hasSize(exerciseCount - 2);
-        assertThat(modelAssesmentKnowledgeRepository.findAll()).hasSize(modelAssessmentKnowledgeCount - 1);
+        assertThat(modelAssessmentKnowledgeRepository.findAll()).hasSize(modelAssessmentKnowledgeCount - 1);
     }
 
     /**
@@ -233,7 +232,7 @@ public class AssessmentKnowledgeIntegrationTest extends AbstractSpringIntegratio
      */
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testSetTextAssessmentKnowledgeToTextBlocks() {
+    void testSetTextAssessmentKnowledgeToTextBlocks() {
         final Course course1 = database.addCourseWithOneReleasedTextExercise();
         final Course course2 = database.addCourseWithOneReleasedTextExercise();
         TextExercise exercise1 = (TextExercise) course1.getExercises().iterator().next();
@@ -262,12 +261,12 @@ public class AssessmentKnowledgeIntegrationTest extends AbstractSpringIntegratio
             final String idString = textSubmission.getId() + ";0-30;" + textSubmission.getText().substring(0, 30);
             return Segment.newBuilder().setId(sha1Hex(idString)).setSubmissionId(textSubmission.getId().intValue()).setStartIndex(0).setEndIndex(30)
                     .setText(textSubmission.getText().substring(0, 30)).build();
-        }).collect(toList());
+        }).toList();
         List<Segment> segments2 = textSubmissions2.stream().map(textSubmission -> {
             final String idString = textSubmission.getId() + ";0-30;" + textSubmission.getText().substring(0, 30);
             return Segment.newBuilder().setId(sha1Hex(idString)).setSubmissionId(textSubmission.getId().intValue()).setStartIndex(0).setEndIndex(30)
                     .setText(textSubmission.getText().substring(0, 30)).build();
-        }).collect(toList());
+        }).toList();
         List<TextBlock> textBlocks1 = atheneService.parseTextBlocks(segments1, exercise1.getId());
         List<TextBlock> textBlocks2 = atheneService.parseTextBlocks(segments2, exercise1.getId());
         for (TextBlock textBlock : textBlocks1) {
@@ -287,7 +286,7 @@ public class AssessmentKnowledgeIntegrationTest extends AbstractSpringIntegratio
      */
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testSetModelAssessmentKnowledgeToModelElements() throws Exception {
+    void testSetModelAssessmentKnowledgeToModelElements() throws Exception {
         ModelingSubmission submission1 = ModelFactory.generateModelingSubmission(FileUtils.loadFileFromResources("test-data/model-submission/model.54727.json"), true);
         submission1.setId(1L);
         ModelingSubmission submission2 = ModelFactory.generateModelingSubmission(FileUtils.loadFileFromResources("test-data/model-submission/model.54727.cpy.json"), true);
@@ -300,7 +299,7 @@ public class AssessmentKnowledgeIntegrationTest extends AbstractSpringIntegratio
         Course course = database.addEmptyCourse();
         ModelingExercise exercise1 = modelingExerciseUtilService.createModelingExercise(course.getId());
         ModelingExercise exercise2 = modelingExerciseUtilService.createModelingExercise(course.getId());
-        modelAssessmentKnowledgeService = new ModelAssessmentKnowledgeService(modelAssesmentKnowledgeRepository, modelingExerciseRepository);
+        modelAssessmentKnowledgeService = new ModelAssessmentKnowledgeService(modelAssessmentKnowledgeRepository, modelingExerciseRepository);
         exercise1.setKnowledge(modelAssessmentKnowledgeService.createNewKnowledge());
         exercise2.setKnowledge(modelAssessmentKnowledgeService.createNewKnowledge());
 
